# gewaechshaus

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.sensor_reader  README.md  docker-compose.yml  pyproject.toml
frontend/gewaechshaus/: package-lock.json  package.json
scripts/: test_actuators.py  test_influxdb.py  test_notebook.ipynb
src/: decorators.py  main.py
src/models/: data.py  enums.py  exceptions.py  influxdb.py  mqtt.py  sensor.py
src/models/components/: actuators.py  base.py  sensor.py
src/models/components.py/: actuators.py  base.py  sensor.py
src/services/api/: app.py
src/services/api/db/: data.py
src/services/api/handlers/: data.py  windows.py
src/services/api/models/: data.py
src/services/api/router/: data.py  windows.py
src/services/sensor_reader/: Dockerfile  influxdb.py  main.py  mqtt.py  setup.py
src/services/sensor_reader/src/: display.py  exceptions.py  main.py  mqtt.py  setup.py
src/services/sensor_reader/src/models/: enums.py  sensor.py
src/services/sensor_reader/src/sensor_reader/: display.py  main.py
src/shared/: actuators.py  influxdb.py  sqlite.py
src/utils/: decorators.py
