[project]
name = "gewaechshaus"
version = "0.1.0"
description = "Full backend including sensor data client and API to fully automate my greenhouse."
authors = [
    {name = "Jannik Kalkmann"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
